--- a/css/styles.css
+++ b/css/styles.css
@@ -2,3 +2,96 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box; }
+
+@font-face {
+  font-family: 'Red Hat Display';
+  src: url(../fonts/RedHatDisplay-VariableFont_wght.ttf); }
+
+body {
+  font-family: 'Red Hat Display'; }
+
+@media screen and (max-width: 375px) {
+  .main {
+    background-color: #e0e8ff;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    justify-content: center;
+    align-items: center; }
+    .main .card {
+      margin-top: 100px;
+      margin-bottom: 80px;
+      background-color: #fcfcfc;
+      display: flex;
+      flex-direction: column;
+      flex-wrap: nowrap;
+      justify-content: center;
+      align-items: center;
+      gap: 20px;
+      width: 88%;
+      border-radius: 20px;
+      box-shadow: 0px 10px 70px #7280a7;
+      overflow: hidden; }
+      .main .card img {
+        width: 100%; }
+      .main .card h1 {
+        color: #1f2f56;
+        font-size: 22px;
+        font-weight: 900; }
+      .main .card p {
+        width: 80%;
+        color: #7280a7;
+        font-size: 16px;
+        font-weight: 500;
+        line-height: 25px;
+        text-align: center; }
+      .main .card .order {
+        width: 90%;
+        padding: 15px;
+        background-color: #f5f7ff;
+        display: flex;
+        flex-direction: row;
+        flex-wrap: nowrap;
+        justify-content: space-between;
+        align-items: center;
+        border-radius: 10px; }
+        .main .card .order img {
+          max-width: 20%; }
+        .main .card .order div h2 {
+          color: #1f2f56;
+          font-size: 16px;
+          font-weight: 900; }
+        .main .card .order div p {
+          font-size: 16px;
+          font-weight: 500; }
+        .main .card .order a {
+          color: #3829e0;
+          font-size: 12px;
+          font-weight: 700; }
+          .main .card .order a:hover {
+            cursor: pointer; }
+      .main .card .btn--proceed {
+        width: 90%;
+        background-color: #3829e0;
+        color: #fcfcfc;
+        font-size: 18px;
+        font-weight: 900;
+        padding: 15px;
+        border: none;
+        border-radius: 10px;
+        box-shadow: 0px 10px 30px #7280a7; }
+        .main .card .btn--proceed:hover {
+          cursor: pointer; }
+      .main .card .cancel {
+        margin-bottom: 25px;
+        color: #7280a7;
+        font-weight: 700; }
+        .main .card .cancel:hover {
+          cursor: pointer;
+          color: #1f2f56; } }
+
+.attribution {
+  font-size: 11px;
+  text-align: center; }
+  .attribution a {
+    color: #3e52a3; }
