--- a/scss/utilities/_variables.scss
+++ b/scss/utilities/_variables.scss
@@ -2,6 +2,7 @@
 // Primary:
 $pale-blue: hsl(225, 100%, 94%);
 $bright-blue: hsl(245, 75%, 52%);
+$bright-blue-hover: hsl(245, 82%, 60%);
 
 // Neutral:
 $very-pale-blue: hsl(225, 100%, 98%);
