--- a/scss/layout/_main.scss
+++ b/scss/layout/_main.scss
@@ -55,7 +55,8 @@
                     font-weight: 700;
                     &:hover{
                         cursor: pointer;
-                        // color: $dark-blue;
+                        text-decoration: none;
+                        color: $bright-blue-hover;
                     }
                 }
             }
@@ -63,7 +64,7 @@
                 width: 90%;
                 background-color: $bright-blue;
                 color: #fcfcfc;
-                font-size: 18px;
+                font-size: 14px;
                 font-weight: 900;
                 padding: 15px;
                 border: none;
@@ -71,7 +72,7 @@
                 box-shadow: 0px 10px 30px $desaturated-blue;
                 &:hover{
                     cursor: pointer;
-                    // background-color: blue;
+                    background-color: $bright-blue-hover;
                 }
             }
             .cancel{
@@ -90,5 +91,104 @@
 
 // Desktop:
 @media screen and (min-width: 375px) {
-    
+    .main{
+        background: url(../images/pattern-background-desktop.svg);
+        background-color: $pale-blue;
+        background-size: cover;
+        background-position: right;
+        @include flexbox(flex, column, nowrap, center, center);
+        .card{
+            margin-top: 100px;
+            margin-bottom: 80px;
+            background-color: white;
+            @include flexbox(flex, column, nowrap, center, center);
+            width: 24%;
+            border-radius: 20px;
+            box-shadow: 0px 10px 10px $desaturated-blue;
+            overflow: hidden;
+            img{
+                width: 100%;
+            }
+            h1{
+                margin-top: 50px;
+                color: $dark-blue;
+                font-size: 28px;
+                font-weight: 900;
+            }
+            > p{
+                margin-top: 20px;
+                width: 80%;
+                color: $desaturated-blue;
+                font-size: 18px;
+                font-weight: 500;
+                line-height: 30px;
+                text-align: center;
+            }
+            .order{
+                margin-top: 20px;
+                width: 80%;
+                padding: 15px;
+                background-color: $very-pale-blue;
+                @include flexbox(flex, row, nowrap, flex-start, center);
+                border-radius: 10px;
+                img{
+                    padding: 8px;
+                    width: 20%;
+                }
+                div{
+                    width: 60%;
+                    margin-left: 20px;
+                    gap: 5px;
+                    @include flexbox(flex, column, nowrap, center, flex-start);
+                    h2{
+                        color: $dark-blue;
+                        font-size: $p-font-size;
+                        font-weight: 900;
+                    }
+                    p{
+                        color: $desaturated-blue;
+                        font-size: $p-font-size;
+                        font-weight: 500;
+                    }
+                }
+                a{
+                    width: 20%;
+                    color: $bright-blue;
+                    font-size: 14px;
+                    font-weight: 700;
+                    &:hover{
+                        cursor: pointer;
+                        text-decoration: none;
+                        color: $bright-blue-hover;
+                    }
+                }
+            }
+            .btn--proceed{
+                margin-top: 40px;
+                width: 80%;
+                background-color: $bright-blue;
+                color: #fcfcfc;
+                font-size: 14px;
+                font-weight: 900;
+                padding: 15px;
+                border: none;
+                border-radius: 10px;
+                box-shadow: 0px 10px 30px $desaturated-blue;
+                &:hover{
+                    cursor: pointer;
+                    background-color: $bright-blue-hover;
+                }
+            }
+            .cancel{
+                margin-top: 40px;
+                margin-bottom: 50px;
+                color: $desaturated-blue;
+                font-weight: 700;
+                &:hover{
+                    cursor: pointer;
+                    color: $dark-blue;
+                }
+            }
+        }
+    }
 }
