--- a/scss/base/_typo.scss
+++ b/scss/base/_typo.scss
@@ -5,5 +5,5 @@
     src: url(../fonts/RedHatDisplay-VariableFont_wght.ttf);
 }
 body{
-    font-family: 'Red Hat Display';
+    font-family: 'Red Hat Display', sans-serif;
 }
