--- a/css/styles.css
+++ b/css/styles.css
@@ -8,11 +8,14 @@
   src: url(../fonts/RedHatDisplay-VariableFont_wght.ttf); }
 
 body {
-  font-family: 'Red Hat Display'; }
+  font-family: 'Red Hat Display', sans-serif; }
 
-@media screen and (max-width: 375px) {
+@media only screen and (max-width: 375px) {
   .main {
+    background-image: url(../images/pattern-background-mobile.svg);
     background-color: #e0e8ff;
+    background-repeat: no-repeat;
+    background-size: contain;
     display: flex;
     flex-direction: column;
     flex-wrap: nowrap;
@@ -20,7 +23,7 @@ body {
     align-items: center; }
     .main .card {
       margin-top: 100px;
-      margin-bottom: 80px;
+      margin-bottom: 120px;
       background-color: #fcfcfc;
       display: flex;
       flex-direction: column;
@@ -30,11 +33,14 @@ body {
       gap: 20px;
       width: 88%;
       border-radius: 20px;
-      box-shadow: 0px 10px 70px #7280a7;
+      box-shadow: 0px 16px 5px 0px rgba(0, 0, 0, 0.11);
+      -webkit-box-shadow: 0px 16px 5px 0px rgba(0, 0, 0, 0.11);
+      -moz-box-shadow: 0px 16px 5px 0px rgba(0, 0, 0, 0.11);
       overflow: hidden; }
       .main .card img {
         width: 100%; }
       .main .card h1 {
+        margin-top: 20px;
         color: #1f2f56;
         font-size: 22px;
         font-weight: 900; }
@@ -81,24 +87,28 @@ body {
         padding: 15px;
         border: none;
         border-radius: 10px;
-        box-shadow: 0px 10px 30px #7280a7; }
+        box-shadow: 0px 16px 5px 0px rgba(0, 0, 0, 0.11);
+        -webkit-box-shadow: 0px 16px 5px 0px rgba(0, 0, 0, 0.11);
+        -moz-box-shadow: 0px 16px 5px 0px rgba(0, 0, 0, 0.11);
+        transition: background-color 0.3s ease; }
         .main .card .btn--proceed:hover {
           cursor: pointer;
           background-color: #5345ed; }
       .main .card .cancel {
         margin-bottom: 25px;
         color: #7280a7;
-        font-weight: 700; }
+        font-weight: 700;
+        transition: color 0.3s ease; }
         .main .card .cancel:hover {
           cursor: pointer;
           color: #1f2f56; } }
 
-@media screen and (min-width: 375px) {
+@media only screen and (min-width: 375px) {
   .main {
     background: url(../images/pattern-background-desktop.svg);
     background-color: #e0e8ff;
-    background-size: cover;
-    background-position: right;
+    background-repeat: no-repeat;
+    background-size: contain;
     display: flex;
     flex-direction: column;
     flex-wrap: nowrap;
@@ -115,17 +125,19 @@ body {
       align-items: center;
       width: 24%;
       border-radius: 20px;
-      box-shadow: 0px 10px 10px #7280a7;
+      box-shadow: 0px 16px 5px 0px rgba(0, 0, 0, 0.11);
+      -webkit-box-shadow: 0px 16px 5px 0px rgba(0, 0, 0, 0.11);
+      -moz-box-shadow: 0px 16px 5px 0px rgba(0, 0, 0, 0.11);
       overflow: hidden; }
       .main .card img {
         width: 100%; }
       .main .card h1 {
         margin-top: 50px;
         color: #1f2f56;
-        font-size: 28px;
+        font-size: 32px;
         font-weight: 900; }
       .main .card > p {
-        margin-top: 20px;
+        margin-top: 25px;
         width: 80%;
         color: #7280a7;
         font-size: 18px;
@@ -135,7 +147,7 @@ body {
       .main .card .order {
         margin-top: 20px;
         width: 80%;
-        padding: 15px;
+        padding: 25px;
         background-color: #f5f7ff;
         display: flex;
         flex-direction: row;
@@ -157,40 +169,43 @@ body {
           align-items: flex-start; }
           .main .card .order div h2 {
             color: #1f2f56;
-            font-size: 16px;
+            font-size: 15px;
             font-weight: 900; }
           .main .card .order div p {
             color: #7280a7;
-            font-size: 16px;
-            font-weight: 500; }
+            font-size: 14px; }
         .main .card .order a {
           width: 20%;
           color: #3829e0;
           font-size: 14px;
-          font-weight: 700; }
+          font-weight: 900;
+          transition: color 0.3s ease; }
           .main .card .order a:hover {
             cursor: pointer;
             text-decoration: none;
             color: #5345ed; }
       .main .card .btn--proceed {
-        margin-top: 40px;
+        margin: 30px 0px;
         width: 80%;
         background-color: #3829e0;
         color: #fcfcfc;
         font-size: 14px;
         font-weight: 900;
-        padding: 15px;
+        padding: 20px;
         border: none;
         border-radius: 10px;
-        box-shadow: 0px 10px 30px #7280a7; }
+        box-shadow: 0px 16px 5px 0px rgba(0, 0, 0, 0.11);
+        -webkit-box-shadow: 0px 16px 5px 0px rgba(0, 0, 0, 0.11);
+        -moz-box-shadow: 0px 16px 5px 0px rgba(0, 0, 0, 0.11);
+        transition: background-color 0.3s ease; }
         .main .card .btn--proceed:hover {
           cursor: pointer;
           background-color: #5345ed; }
       .main .card .cancel {
-        margin-top: 40px;
         margin-bottom: 50px;
         color: #7280a7;
-        font-weight: 700; }
+        font-weight: 700;
+        transition: color 0.3s ease; }
         .main .card .cancel:hover {
           cursor: pointer;
           color: #1f2f56; } }
